--- a/Booking_API/Booking_API.csproj
+++ b/Booking_API/Booking_API.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\room_images\" />
+  </ItemGroup>
+
 </Project>
