--- a/Booking_API/appsettings.json
+++ b/Booking_API/appsettings.json
@@ -17,5 +17,13 @@
     "ValidAudience": "BookingApiClient",
     "Secret": "BookingApiMyasdet keyasdq@@$!~eq@MasdklKASJJJSd23inknc23234ydlammkSSKK)(#&#^$$&&%%SKAShsVVVsmMMSdecret keyBooking"
   },
+
+  "EmailSettings": {
+    "Email": "bookhotelsingeorgia@gmail.com",
+    "Passowrd": "qoeluciemkrewumz",
+    "Host": "smtp.gmail.com",
+    "DisplayName": "Booking Hotel",
+    "Port": 587
+  },
   "AllowedHosts": "*"
 }
